--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://Enemies/Spearman.tscn", "res://Enemies/Knight.tscn", "res://Player/Player.tscn", "res://world.tscn")
-current_scene="res://Enemies/Spearman.tscn"
+current_scene="res://world.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
